tests/requests/valid/rfc9112_target_absolute_ipv6_01.http
GET http://[::1]:8080/foo HTTP/1.1\r\n
Host: [::1]:8080\r\n
\r\n
